Bug 249912 XSENDER support broken in IMAP patch by Hans-A.Engel@unibas.ch r=ducarroz sr=bienvenu